[TEST][DATA][UIMAP] - MAGETWO-2676 implemented TL-MAGE-5516 and TL-MAGE-5515

--- a/fixture/community2/core/Mage/UrlRewrite/data/UrlRewrite.yml
+++ b/fixture/community2/core/Mage/UrlRewrite/data/UrlRewrite.yml
@@ -50,10 +50,10 @@ simple_product_required:
     categories: Default Category
 
 url_rewrite_product:
-    request_path: %randomize%.html
+    request_path: Product(%randomize%).html
 
 url_rewrite_category:
-    request_path: %randomize%.html
+    request_path: Category(%randomize%).html
 
 url_rewrite_custom_sample:
     target_path: customer-service
