CR Changes MAGETWO-2764 Testing implemented changes in product creation functionality for split button Add Product

--- a/dev/tests/functional/fixture/default/core/Mage/Product/uimap/admin/Product.yml
+++ b/dev/tests/functional/fixture/default/core/Mage/Product/uimap/admin/Product.yml
@@ -90,7 +90,7 @@ new_product_settings:
 # Add New Product page
 new_product:
 #    mca: catalog_product/new/%productParameters%
-    mca: catalog_product/new/set/%setId%/type/%productType%/
+    mca: catalog_product/new/set/%setId%/type/%productType%
     title: New Product / Manage Products / Catalog / Magento Admin
     uimap: &newProduct
         form: &newProductCreationForm
