Fixed: MAGETWO-2855 Updating existed functional tests according implemented functionalities: sku auto-generation and split button - fixed issues with existed sku

--- a/dev/tests/functional/fixture/community2/core/Mage/Product/uimap/admin/Product.yml
+++ b/dev/tests/functional/fixture/community2/core/Mage/Product/uimap/admin/Product.yml
@@ -115,6 +115,12 @@ edit_saved_product_after_changed_attribute_set:
 edit_product_save_and_continue:
     uimap: *newProduct
 
+edit_new_product_save_and_continue:
+    uimap: *newProduct
+
+edit_new_configurable_save_and_continue:
+    uimap: *newProduct
+
 create_empty_simple_from_configurable:
     uimap: *newProduct
 
