--- a/fixture/default/core/Mage/Product/uimap/admin/Product.yml
+++ b/fixture/default/core/Mage/Product/uimap/admin/Product.yml
@@ -677,6 +677,11 @@ edit_product_save_and_continue:
     title: %productName% / Manage Products / Catalog / Magento Admin
     uimap: *editProduct
 
+edit_new_product_save_and_continue:
+    mca: catalog_product/edit/id/%id%/back/edit/tab/product_info_tabs_group_%tab%/set/%setId%/type/%productType%
+    title: %productName% / Manage Products / Catalog / Magento Admin
+    uimap: *editProduct
+
 create_empty_simple_from_configurable:
     mca: catalog_product/new/set/%setId%/type/simple/required/%attrId%/popup/1/
     title: New Product / Manage Products / Catalog / Magento Admin
