--- a/dev/tests/functional/fixture/default/core/Mage/Product/uimap/admin/Product.yml
+++ b/dev/tests/functional/fixture/default/core/Mage/Product/uimap/admin/Product.yml
@@ -678,12 +678,12 @@ edit_product_save_and_continue:
     uimap: *editProduct
 
 edit_new_product_save_and_continue:
-    mca: catalog_product/edit/id/%id%/back/edit/tab/product_info_tabs_group_%tab%/set/%setId%/type/%productType%
+    mca: catalog_product/edit/id/%id%/back/edit/tab/product_info_tabs_group_%tab%/set/%setId%/type/%productType%/
     title: %productName% / Manage Products / Catalog / Magento Admin
     uimap: *editProduct
 
 edit_new_configurable_save_and_continue:
-    mca: catalog_product/edit/id/%id%/back/edit/tab/product_info_tabs_group_%tab%/attributes/%attributeTitle%/set/%setId%/type/%productType%
+    mca: catalog_product/edit/id/%id%/back/edit/tab/product_info_tabs_group_%tab%/attributes/%attributeTitle%/set/%setId%/type/%productType%/
     title: %productName% / Manage Products / Catalog / Magento Admin
     uimap: *editProduct
 
