--- a/fixture/default/core/Mage/SystemConfiguration/data/PaymentMethod.yml
+++ b/fixture/default/core/Mage/SystemConfiguration/data/PaymentMethod.yml
@@ -280,7 +280,7 @@ authorizenet_without_3Dsecure:
             an_title: Credit Card (Authorize.net)
             an_api_login_id: 36sCtGS8w
             an_payment_action: Authorize Only
-            an_transaction_key: 8G9dcr8985GNNS8t
+            an_transaction_key: 3W532Za62p5u8hWr
             an_new_order_status: %noValue%
             an_test_mode: No
             an_gateway_url: https://test.authorize.net/gateway/transact.dll
@@ -308,7 +308,7 @@ authorizenet_with_3Dsecure:
             an_title: Credit Card (Authorize.net)
             an_api_login_id: 36sCtGS8w
             an_payment_action: Authorize Only
-            an_transaction_key: 8G9dcr8985GNNS8t
+            an_transaction_key: 3W532Za62p5u8hWr
             an_new_order_status: %noValue%
             an_test_mode: No
             an_gateway_url: https://test.authorize.net/gateway/transact.dll
