--- a/fixture/community2/core/Mage/UrlRewrite/uimap/admin/UrlRewrite.yml
+++ b/fixture/community2/core/Mage/UrlRewrite/uimap/admin/UrlRewrite.yml
@@ -73,6 +73,7 @@ add_new_urlrewrite_category:
                         xpath: //*[@id='page:main-container']/div/fieldset
                         links:
                             root_category: //ul/div/li/div/a[contains(span,'%rootName%')]
+#                            Don't delete this xpath
 #                            sub_category: //*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
                             sub_category: //ul[@class='x-tree-node-ct']/li/div/a[contains(span,'%subName%')]
                             expand_category: //*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
