--- a/fixture/default/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
+++ b/fixture/default/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
@@ -2194,7 +2194,7 @@ system_configuration:
                                         api_certificate_use_default: //input[@name='groups[api][fields][api_cert][inherit]']
                                         api_signature_use_default: //input[@name='groups[api][fields][api_signature][inherit]']
                                         api_authentication_methods_use_default: //input[@name='groups[api][fields][api_authentication][inherit]']
-                                        sandbox_mode_use_default: //input[@name='groups[api][fields][sandbox_flag][inherit]']
+                                        api_sandbox_mode_use_default: //input[@name='groups[api][fields][sandbox_flag][inherit]']
                                         api_uses_proxy_use_default: //input[@name='groups[api][fields][use_proxy][inherit]']
                                         proxy_host: //input[@name='groups[api][fields][proxy_host][inherit]']
                                         proxy_port: //input[@name='groups[api][fields][proxy_port][inherit]']
@@ -2532,6 +2532,11 @@ system_configuration:
                     sales_payment_methods:
                         xpath: //a[contains(@href, 'edit/section/payment/')]
                         fieldsets:
+                            -
+                                paypal_solutions:
+                                    xpath: //div[@class='paypal-payment-notice']
+                                    links:
+                                        go_to_paypal_solutions: //a[text()='View PayPal solutions.']
                             -
                                 saved_cc:
                                     xpath: //fieldset[@id='payment_ccsave']
