--- a/fixture/enterprise2/core/Mage/RMA/uimap/admin/RMA.yml
+++ b/fixture/enterprise2/core/Mage/RMA/uimap/admin/RMA.yml
@@ -36,3 +36,107 @@ manage_rma_items_attribute:
     mca: rma_item_attribute/
     click_xpath: //ul[@id='nav']//a[contains(@href, 'rma_item_attribute/')]
     title: Manage RMA Item Attributes / Magento Admin
+    uimap:
+        form:
+            fieldsets:
+                -
+                    rma_item_atribute_grid:
+                        xpath: //*[@id='rmaItemAttributeGrid']
+                        buttons:
+                            reset_filter: //button[span='Reset Filter']
+                            search: //button[span='Search']
+                        fields:
+                            filter_attribute_code: //*[@id='rmaItemAttributeGrid_filter_attribute_code']
+                            filter_attribute_label: //*[@id='rmaItemAttributeGrid_filter_frontend_label']
+                            filter_sort_order: //*[@id='rmaItemAttributeGrid_filter_sort_order']
+                        dropdown:
+                            filter_required: //*[@id='rmaItemAttributeGrid_filter_is_required']
+                            filter_system: //*[@id='rmaItemAttributeGrid_filter_is_user_defined']
+                            filter_visible_on_frontend: //*[@id='rmaItemAttributeGrid_filter_is_visible']
+        buttons:
+            add_new_attribute: //button[span='Add New Attribute']
+        messages:
+            success_saved_attribute: //li[normalize-space(@class)='success-msg' and contains(.,'The RMA item attribute has been saved.')]
+            success_deleted_attribute: //li[normalize-space(@class)='success-msg' and contains(.,'The RMA item attribute has been deleted.')]
+
+#New RMA Item Attribute page
+new_rma_item_attribute:
+    mca: rma_item_attribute/new/
+    title: New Attribute / Manage RMA Item Attributes / Magento Admin
+    uimap:
+        form: &rmaAttributeForm
+            tabs:
+                -
+                    properties:
+                        xpath: //*[@id='rma_item_attribute_tabs_general']
+                        fieldsets:
+                            -
+                                attribute_properties:
+                                    xpath: //*[@id='base_fieldset']
+                                    fields:
+                                        attribute_code: //*[@id='attribute_code']
+                                        default_value_text: //*[@id='default_value_text']
+                                        default_value_textarea: //*[@id='default_value_textarea']
+                                        min_text_length: //*[@id='min_text_length']
+                                        max_text_length: //*[@id='max_text_length']
+                                        max_file_size: //*[@id='max_file_size']
+                                        max_image_width: //*[@id='max_image_width']
+                                        max_image_height: //*[@id='max_image_heght']
+                                    dropdowns:
+                                        input_type: //*[@id='frontend_input']
+                                        input_validation: //*[@id='input_validation']
+                                        value_required: //*[@id='is_required']
+                                        input_filter: //*[@id='input_filter']
+                            -
+                                frontend_properties:
+                                    xpath: //*[@id='front_fieldset']
+                                    fields:
+                                        sort_order: //*[@id='sort_order']
+                                    dropdowns:
+                                        show_on_frontend: //*[@id='is_visible']
+                                    multiselects:
+                                        forms_to_use: //*[@id='used_in_forms']
+                -
+                    manage_labels_options:
+                        xpath: //*[@id='rma_item_attribute_tabs_options']
+                        fieldsets:
+                            -
+                                manage_titles:
+                                    xpath: //div[@class='entity-edit' and contains(.//@id,'attribute-labels-table')]
+                                    fields:
+                                        admin_title: //input[@name='frontend_label[0]']
+                                        titles_by_store_name: //td[%storeViewNumber%]/input
+                            -
+                                manage_options:
+                                    xpath: "//div[@id='matage-options-panel' and not(@style='display: none;')]"
+                                    buttons:
+                                        add_option: //button[@id='add_new_option_button']
+                                        delete_option: //td[contains(input/@name,'option[delete][option_%fieldOptionNumber%]')]/button
+                                    checkboxes:
+                                        is_default: //input[@name='default[]' and @value='option_%fieldOptionNumber%']
+                                    fields:
+                                        admin_option_name: //input[@name='option[value][option_%fieldOptionNumber%][0]']
+                                        option_position: //input[@name='option[order][option_%fieldOptionNumber%]']
+                                        titles_by_store_name: //td[contains(input/@name,'option[value][option_%fieldOptionNumber%]')][%storeViewNumber%]/input
+        buttons: &rmaAttributeButton
+            back: //button[span='Back']
+            reset: //button[span='Reset']
+            save_attribute: //button[span='Save Attribute']
+            save_and_continue_edit: //button[span='Save and Continue Edit']
+            delete_attribute: //button[span='Delete Attribute']
+        messages: &rmaAttributeMessage
+            exists_attribute_code: //li[normalize-space(@class)='error-msg' and contains(.,'Attribute with the same code already exists')]
+            empty_attribute_code: //*[@id='advice-required-entry-attribute_code']
+            empty_sort_order: //*[@id='advice-required-entry-sort_order']
+            empty_admin_title: //*[@id='advice-required-option-frontend_label[0]']
+            invalid_attribute_code: //div[@id='advice-validate-code-attribute_code']
+            wrong_length_attribute_code: //div[@id='advice-validate-length-attribute_code']
+            delete_confirm_message: Are you sure you want to do this?
+
+edit_rma_item_attribute:
+    mca: rma_item_attribute/edit/attribute_id/%id%/
+    title: %attribute_admin_title% / Manage RMA Item Attributes / Magento Admin
+    uimap:
+        form: *rmaAttributeForm
+        buttons: *rmaAttributeButton
+        messages: *rmaAttributeMessage
