--- a/fixture/community2/core/Mage/UrlRewrite/data/UrlRewrite.yml
+++ b/fixture/community2/core/Mage/UrlRewrite/data/UrlRewrite.yml
@@ -52,6 +52,10 @@ simple_product_required:
 url_rewrite_product:
     request_path: Product(%randomize%).html
 
+url_rewrite_product_custom:
+    id_path: %randomize%
+    request_path: Product(%randomize%).html
+
 url_rewrite_category:
     request_path: Category(%randomize%).html
 
