--- a/fixture/default/core/Mage/Customer/uimap/admin/Customers.yml
+++ b/fixture/default/core/Mage/Customer/uimap/admin/Customers.yml
@@ -84,7 +84,7 @@ create_customer:
             tabs:
                 -
                     account_information:
-                        xpath: //a[@id='customer_info_tabs_account']/span
+                        xpath: //a[@id='customer_info_tabs_account']
                         fieldsets:
                             -
                                 account_info:
@@ -168,11 +168,11 @@ edit_customer:
             tabs:
                 -
                     customer_view:
-                        xpath: //a[@id='customer_info_tabs_customer_edit_tab_view']/span
+                        xpath: //a[@id='customer_info_tabs_customer_edit_tab_view']
                         # need to edit
                 -
                     account_information:
-                        xpath: //a[@id='customer_info_tabs_account']/span
+                        xpath: //a[@id='customer_info_tabs_account']
                         fieldsets:
                             -
                                 account_info:
@@ -202,7 +202,7 @@ edit_customer:
                                     required: [new_password]
                 -
                     addresses:
-                        xpath: //a[@id='customer_info_tabs_addresses']/span
+                        xpath: //a[@id='customer_info_tabs_addresses']
                         fieldsets:
                             -
                                 list_customer_addresses:
@@ -240,35 +240,35 @@ edit_customer:
                                     required: [first_name, last_name, street_address_line_1, city, country, zip_code, telephone]
                 -
                     orders:
-                        xpath: //a[@id='customer_info_tabs_orders']/span
+                        xpath: //a[@id='customer_info_tabs_orders']
                         # need to edit
                 -
                     billing_agremnts:
-                        xpath: //a[@id='customer_info_tabs_customer_edit_tab_agreements']/span
+                        xpath: //a[@id='customer_info_tabs_customer_edit_tab_agreements']
                         # need to edit
                 -
                     recuring_profiles:
-                        xpath: //a[@id='customer_info_tabs_customer_edit_tab_recurring_profile']/span
+                        xpath: //a[@id='customer_info_tabs_customer_edit_tab_recurring_profile']
                         # need to edit
                 -
                     shopping_cart:
-                        xpath: //a[@id='customer_info_tabs_cart']/span
+                        xpath: //a[@id='customer_info_tabs_cart']
                         # need to edit
                 -
                     wishlist:
-                        xpath: //a[@id='customer_info_tabs_wishlist']/span
+                        xpath: //a[@id='customer_info_tabs_wishlist']
                         # need to edit
                 -
                     newsletters:
-                        xpath: //a[@id='customer_info_tabs_newsletter']/span
+                        xpath: //a[@id='customer_info_tabs_newsletter']
                         # need to edit
                 -
                     product_review:
-                        xpath: //a[@id='customer_info_tabs_reviews']/span
+                        xpath: //a[@id='customer_info_tabs_reviews']
                         # need to edit
                 -
                     product_tags:
-                        xpath: //a[@id='customer_info_tabs_tags']/span
+                        xpath: //a[@id='customer_info_tabs_tags']
                         fieldsets:
                             -
                                 product_tags:
