--- a/fixture/default/core/Mage/ShoppingCartPriceRule/uimap/admin/ShoppingCartPriceRule.yml
+++ b/fixture/default/core/Mage/ShoppingCartPriceRule/uimap/admin/ShoppingCartPriceRule.yml
@@ -73,7 +73,7 @@ create_shopping_cart_price_rule:
             tabs:
                 -
                     rule_information:
-                        xpath: //a[@title='Rule Information']/span
+                        xpath: //a[@title='Rule Information']
                         fieldsets:
                             -
                                 general_information:
@@ -96,7 +96,7 @@ create_shopping_cart_price_rule:
                                         websites: //select[@id='rule_website_ids']
                 -
                     rule_conditions:
-                        xpath: //a[@title='Conditions']/span
+                        xpath: //a[@title='Conditions']
                         fieldsets:
                             -
                                 apply_for_rule_condition:
@@ -142,7 +142,7 @@ create_shopping_cart_price_rule:
                                         category: //div[contains(a/span,'%categoryName%')]//input
                 -
                     rule_actions:
-                        xpath: //a[@title='Actions']/span
+                        xpath: //a[@title='Actions']
                         fieldsets:
                             -
                                 update_prices_using_the_following_information:
@@ -200,7 +200,7 @@ create_shopping_cart_price_rule:
                                         category: //div[contains(a/span,'%categoryName%')]//input
                 -
                     rule_labels:
-                        xpath: //a[@title='Labels']/span
+                        xpath: //a[@title='Labels']
                         fieldsets:
                             -
                                 default_label:
