--- a/config/config.yml
+++ b/config/config.yml
@@ -61,11 +61,9 @@ browsers:
 framework:
     fixture_base_path: 'fixture'
     testsuite_base_path: 'testsuite'
-    #work only if tests are run for single browser
-    shareSession: true
     coverageScriptUrl: ''
     #captureScreenshotOnFailure works only for browsers that support it: Firefox/Chrome, IE with snapsIE tool
-    captureScreenshotOnFailure: true
+    saveScreenshotOnFailure: true
     saveHtmlPageOnFailure: false
     load_all_uimaps: true
     load_all_data: false
@@ -208,4 +206,4 @@ applications:
                 uimap_path: 'frontend'
             paypal_sandbox: *paypalSandbox
             paypal_developer: *paypalDeveloper
-    default: *ee112
+    default: *m2ce
