--- a/dev/tests/js/jsTestDriver.conf
+++ b/dev/tests/js/jsTestDriver.conf
@@ -20,8 +20,13 @@ load:
   - ../../../pub/js/jquery/slimScroll/slimScroll.min.js
   - ../../../app/code/core/Mage/Page/view/frontend/js/cookies.js
   - ../../../app/code/core/Mage/DesignEditor/view/frontend/css/styles.css
+  - ../../../pub/js/mage/calendar.js
+  - ../../../pub/js/jquery/jquery-ui-timepicker-addon.js
+  - ../../../pub/js/jquery/jquery-ui-1.8.22.custom.css
+  - ../../../pub/js/jquery/jquery-ui-timepicker-addon.css
 test:
   - ../../../dev/tests/js/testsuite/mage/localization/*.js
   - ../../../dev/tests/js/testsuite/mage/*.js
   - ../../../dev/tests/js/testsuite/mage/validation/*.js
   - ../../../dev/tests/js/testsuite/mage/design_editor/*.js
+  - ../../../dev/tests/js/testsuite/mage/calendar/*.js
