Squashed commit of the following:
commit 94a892507a7108afddd224e5e85f46cb689fdee5
Author: Sergii Dzhepa <sdzhepa@ebay.com>
Date:   Wed Aug 29 15:50:58 2012 +0300

    Fixed MAGETWO-2982 TAF Tests creation for CRUD CMS Page(ACL Resources)
    - Fixed fix formatting issues after CR

commit 719077891f7248f8fa9bd20bc7d46847a9e52a11
Author: Sergii Dzhepa <sdzhepa@ebay.com>
Date:   Tue Aug 28 19:21:51 2012 +0300

    Fixed MAGETWO-2982 TAF Tests creation for CRUD CMS Page(ACL Resources)
    - Fixed after CR

commit a4e297ab54a7073c1f775729e8a3d19f817b3720
Author: Sergii Dzhepa <sdzhepa@ebay.com>
Date:   Tue Aug 28 17:10:15 2012 +0300

    Implemented MAGETWO-2982 TAF Tests creation for CRUD CMS Page(ACL Resources)
    - Added dataset for verification elements on Manage Cms Page(EE, CE)
    - Added UIMAP for save_and_continue page
    - Added test in Community2 (also compatible with Enterprice2 )

--- a/dev/tests/functional/fixture/enterprise2/core/Mage/CmsPage/uimap/admin/CmsPage.yml
+++ b/dev/tests/functional/fixture/enterprise2/core/Mage/CmsPage/uimap/admin/CmsPage.yml
@@ -2,13 +2,21 @@
 # {license_notice}
 #
 # @category    Magento
-# @package     Mage_Tag
+# @package     Mage_CmsPage
 # @subpackage  functional_tests
 # @copyright   {copyright}
 # @license     {license_link}
 #
 #
 ---
+# CMS Edit page after click "Save and Continue" button
+save_and_continue_edit_cms_page:
+    mca: cms_page/edit/page_id/%id%/back/edit/active_tab/%tab%/
+    title: %pageName% / Pages / CMS / Magento Admin
+    uimap:
+        messages:
+            success_saved_cms_page: //li[normalize-space(@class)='success-msg' and contains(.,'The page has been saved.')]
+
 # Manage Pages Hierarchy page
 manage_pages_hierarchy:
     mca: cms_hierarchy/
