Fixed - MAGETWO-2573 Migration of js Calendar on jQuery - Replaced jquery ui css files and images - Added calendar.css file

--- a/dev/tests/js/jsTestDriver.conf
+++ b/dev/tests/js/jsTestDriver.conf
@@ -22,8 +22,8 @@ load:
   - ../../../app/code/core/Mage/DesignEditor/view/frontend/css/styles.css
   - ../../../pub/js/mage/calendar.js
   - ../../../pub/js/jquery/jquery-ui-timepicker-addon.js
-  - ../../../pub/js/jquery/jquery-ui-1.8.22.custom.css
-  - ../../../pub/js/jquery/jquery-ui-timepicker-addon.css
+  - ../../../pub/js/mage/calendar.css
+
 test:
   - ../../../dev/tests/js/testsuite/mage/localization/*.js
   - ../../../dev/tests/js/testsuite/mage/*.js
